--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ scripts/templates/.DS_Store
 scripts/views/.DS_Store
 scripts/visualizations/.DS_Store
 node_modules/*
+
+scripts/.bundle.js
+scripts/bundle.js
