Update package.json with actual version numbers

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "dependencies": {
     "flux": "^2.0.1",
     "react": "^0.12.0",
-    "d3": "*",
-    "lodash": "*",
+    "d3": "^3.5.17",
+    "lodash": "^4.11.1",
     "keymirror": "~0.1.0",
     "object-assign": "^1.0.0",
-    "simple-statistics": "*"
+    "simple-statistics": "^2.0.0"
   },
   "devDependencies": {
     "browserify": "^6.2.0",
